# studymate-web

./: .gitignore  app.py  cf_worker.py  models.py  pyproject.toml  wrangler.toml
cloudflare/: DEPLOY.md  export_sqlite_to_d1.py  schema.sql
instance/: database.db  test_c8j8gxfg.db  test_f3jtgjh1.db  test_gvaexh64.db  test_s3hfr046.db  test_tq46zuqt.db  test_uogpjumh.db
static/css/: base.css  chat.css  components.css  home.css  pages.css  responsive.css  style.css
templates/: index.html  login.html  mypage.html  mypost.html  myposts.html  profile.html  signup.html  study.html  study_chat.html  study_detail.html  study_edit.html  studywrite.html
tests/: test_app.py
worker/: cf_worker.py
worker/templates/: base.html  chat_list.html  index.html  profile.html  study.html  study_chat.html  study_edit.html  studywrite.html
