[project]
name = "studymate-cloudflare"
version = "0.1.0"
description = "StudyMate Cloudflare Worker deployment"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "markupsafe>=3.0.2",
    "werkzeug>=3.1.3",
]

[dependency-groups]
dev = [
    "workers-py>=1.9.2",
    "workers-runtime-sdk>=0.0.19",
]